# YOLOX

./: .gitignore  README.md  setup.cfg
dataset_utils/: __init__.py  kaggle_dog_and_cat.py  kaggle_skyfusion.py  kaggle_skyfusion_aircraft.ipynb
exps/example/kaggle_dog_and_cat/: yolox_s.py
exps/example/skyfusion/: yolox_s.py
exps/example/skyfusion_aircraft/: yolox_s.py
src/yolox/core/: __init__.py  trainer.py
src/yolox/data/: __init__.py
src/yolox/data/datasets/: __init__.py  coco.py  mosaicdetection.py  voc.py
src/yolox/evaluators/: __init__.py
src/yolox/exp/: __init__.py  yolox_base.py
src/yolox/layers/: __init__.py  fast_coco_eval_api.py
src/yolox/models/: __init__.py  darknet.py  yolo_fpn.py  yolo_head.py  yolo_pafpn.py  yolox.py
src/yolox/utils/: __init__.py  allreduce_norm.py  checkpoint.py  setup_env.py  visualize.py
tools/: evaluate.py  evaluate.yaml  predict.py  predict.yaml  train.py  train.yaml
tools_configs/: skyfusion_train.yaml
yolox/utils/: visualize.py
