[metadata]
name = yolox
version = 0.3.1
author = Megvii basedet team, Y. Natsume
description = Updated fork of the YOLOX object detection library.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/natsunoyuki/YOLOX
project_urls =
    Bug Tracker = https://github.com/natsunoyuki/YOLOX/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    numpy
    torch
    opencv_python
    loguru
    tqdm
    torchvision
    thop
    ninja
    tabulate
    psutil
    tensorboard
    pycocotools
    onnx
    PyYAML

[options.packages.find]
where = src
